tests/rosetta/out/Rust/99-bottles-of-beer-2.error
rustc: exit status 1
warning: unused variable: `randInt`
  --> /tmp/99_bottles_of_beer_2.rs:66:9
   |
66 |     let randInt = move |seed: i32, n: i32| -> i32 {
   |         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_randInt`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: variable does not need to be mutable
  --> /tmp/99_bottles_of_beer_2.rs:48:17
   |
48 |             let mut s = n % 10;
   |                 ----^
   |                 |
   |                 help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error[E0596]: cannot borrow `w` as mutable, as it is not declared as mutable
  --> /tmp/99_bottles_of_beer_2.rs:62:13
   |
62 |             w[0] = format!("{}{}", w[0].clone(), String::from("s"));
   |             ^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
60 |         let mut w = fields(s);
   |             +++

error: aborting due to 1 previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0596`.
